Staring migration to Discord4J